cmake_minimum_required(VERSION 3.17)
project(atcoder)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fstack-protector")

add_executable(abc169_e abc169_e.cpp)
add_executable(abc212_a abc212_a.cpp)
add_executable(abc212_b abc212_b.cpp)
add_executable(abc212_c abc212_c.cpp)
add_executable(abc212_d abc212_d.cpp)
add_executable(abc213_a abc213_a.cpp)
add_executable(abc213_b abc213_b.cpp)
add_executable(abc213_c abc213_c.cpp)
add_executable(abc213_d abc213_d.cpp)
add_executable(abc214_b abc214_b.cpp)
add_executable(abc216_c abc216_c.cpp)
add_executable(abc217_c abc217_c.cpp)
add_executable(abc218_a abc218_a.cpp)
add_executable(abc218_b abc218_b.cpp)
add_executable(abc218_d abc218_d.cpp)
add_executable(abc219_d abc219_d.cpp)
add_executable(dp_a dp_a.cpp)
add_executable(dp_b dp_b.cpp)
add_executable(dp_c dp_c.cpp)
add_executable(dp_d dp_d.cpp)
add_executable(dp_e dp_e.cpp)
add_executable(dp_f dp_f.cpp)
add_executable(dp_g dp_g.cpp)
add_executable(dp_h dp_h.cpp)
add_executable(dp_i dp_i.cpp)
add_executable(dp_j dp_j.cpp)
add_executable(dp_k dp_k.cpp)
add_executable(dp_l dp_l.cpp)
add_executable(dp_m dp_m.cpp)
add_executable(dp_n dp_n.cpp)
add_executable(dp_o dp_o.cpp)
add_executable(dp_p dp_p.cpp)
add_executable(dp_q dp_q.cpp)
add_executable(dp_r dp_r.cpp)
add_executable(dp_t dp_t.cpp)