cmake_minimum_required(VERSION 3.17)
project(atcoder)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "-Devenvalue ${CMAKE_CXX_FLAGS_DEBUG} -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fno-sanitize-recover=all")

add_executable(abc011_3 abc011_3.cpp)
add_executable(abc065_b abc065_b.cpp)
add_executable(abc094_a abc094_a.cpp)
add_executable(abc094_b abc094_b.cpp)
add_executable(abc094_c abc094_c.cpp)
add_executable(abc094_d abc094_d.cpp)
add_executable(abc099_d abc099_d.cpp)
add_executable(abc100_a abc100_a.cpp)
add_executable(abc119_c abc119_c.cpp)
add_executable(abc125_c abc125_c.cpp)
add_executable(abc126_e abc126_e.cpp)
add_executable(abc129_c abc129_c.cpp)
add_executable(abc133_e abc133_e.cpp)
add_executable(abc135_d abc135_d.cpp)
add_executable(abc136_d abc136_d.cpp)
add_executable(abc139_c abc139_c.cpp)
add_executable(abc141_d abc141_d.cpp)
add_executable(abc142_e abc142_e.cpp)
add_executable(abc149_d abc149_d.cpp)
add_executable(abc152_d abc152_d.cpp)
add_executable(abc153_d abc153_d.cpp)
add_executable(abc157_d abc157_d.cpp)
add_executable(abc157_e abc157_e.cpp)
add_executable(abc169_e abc169_e.cpp)
add_executable(abc178_c abc178_c.cpp)
add_executable(abc180_e abc180_e.cpp)
add_executable(abc185_f abc185_f.cpp)
add_executable(abc194_e abc194_e.cpp)
add_executable(abc208_b abc208_b.cpp)
add_executable(abc208_c abc208_c.cpp)
add_executable(abc209_c abc209_c.cpp)
add_executable(abc209_d abc209_d.cpp)
add_executable(abc210_a abc210_a.cpp)
add_executable(abc210_b abc210_b.cpp)
add_executable(abc210_c abc210_c.cpp)
add_executable(abc210_d abc210_d.cpp)
add_executable(abc210_e abc210_e.cpp)
add_executable(abc211_a abc211_a.cpp)
add_executable(abc211_b abc211_b.cpp)
add_executable(abc211_c abc211_c.cpp)
add_executable(abc212_a abc212_a.cpp)
add_executable(abc212_b abc212_b.cpp)
add_executable(abc212_c abc212_c.cpp)
add_executable(abc212_d abc212_d.cpp)
add_executable(abc213_a abc213_a.cpp)
add_executable(abc213_b abc213_b.cpp)
add_executable(abc213_c abc213_c.cpp)
add_executable(abc213_d abc213_d.cpp)
add_executable(abc214_a abc214_a.cpp)
add_executable(abc214_b abc214_b.cpp)
add_executable(abc214_c abc214_c.cpp)
add_executable(abc214_d abc214_d.cpp)
add_executable(abc216_a abc216_a.cpp)
add_executable(abc216_b abc216_b.cpp)
add_executable(abc216_c abc216_c.cpp)
add_executable(abc216_d abc216_d.cpp)
add_executable(abc217_a abc217_a.cpp)
add_executable(abc217_b abc217_b.cpp)
add_executable(abc217_c abc217_c.cpp)
add_executable(abc217_d abc217_d.cpp)
add_executable(abc218_a abc218_a.cpp)
add_executable(abc218_b abc218_b.cpp)
add_executable(abc218_c abc218_c.cpp)
add_executable(abc218_d abc218_d.cpp)
add_executable(abc218_e abc218_e.cpp)
add_executable(abc219_a abc219_a.cpp)
add_executable(abc219_b abc219_b.cpp)
add_executable(abc219_c abc219_c.cpp)
add_executable(abc219_d abc219_d.cpp)
add_executable(abc220_d abc220_d.cpp)
add_executable(abc223_d abc223_d.cpp)
add_executable(abc223_f abc223_f.cpp)
add_executable(abc224_d abc224_d.cpp)
add_executable(abc228_a abc228_a.cpp)
add_executable(abc229_a abc229_a.cpp)
add_executable(abc229_b abc229_b.cpp)
add_executable(abc232_d abc232_d.cpp)
add_executable(abc249_a abc249_a.cpp)
add_executable(abc249_b abc249_b.cpp)
add_executable(abc249_c abc249_c.cpp)
add_executable(abc288_f abc288_f.cpp)
add_executable(abc289_a abc289_a.cpp)
add_executable(abc289_b abc289_b.cpp)
add_executable(abc289_c abc289_c.cpp)
add_executable(abc289_d abc289_d.cpp)
add_executable(abc289_e abc289_e.cpp)
add_executable(abc290_a abc290_a.cpp)
add_executable(abc290_b abc290_b.cpp)
add_executable(abc290_c abc290_c.cpp)
add_executable(abc290_d abc290_d.cpp)
add_executable(abc290_e abc290_e.cpp)
add_executable(abl_d abl_d.cpp)
add_executable(agc017_a agc017_a.cpp)
add_executable(agc029_a agc029_a.cpp)
add_executable(arc029_3 arc029_3.cpp)
add_executable(arc033_3 arc033_3.cpp)
add_executable(arc076_b arc076_b.cpp)
add_executable(arc097_b arc097_b.cpp)
add_executable(arc107_c arc107_c.cpp)
add_executable(code_festival_qualB_d code_festival_qualB_d.cpp)
add_executable(codefestival_2016_qualB_c codefestival_2016_qualB_c.cpp)
add_executable(dp_a dp_a.cpp)
add_executable(dp_b dp_b.cpp)
add_executable(dp_c dp_c.cpp)
add_executable(dp_d dp_d.cpp)
add_executable(dp_e dp_e.cpp)
add_executable(dp_f dp_f.cpp)
add_executable(dp_g dp_g.cpp)
add_executable(dp_h dp_h.cpp)
add_executable(dp_i dp_i.cpp)
add_executable(dp_j dp_j.cpp)
add_executable(dp_k dp_k.cpp)
add_executable(dp_l dp_l.cpp)
add_executable(dp_m dp_m.cpp)
add_executable(dp_n dp_n.cpp)
add_executable(dp_o dp_o.cpp)
add_executable(dp_p dp_p.cpp)
add_executable(dp_q dp_q.cpp)
add_executable(dp_r dp_r.cpp)
add_executable(dp_t dp_t.cpp)
add_executable(dp_z dp_z.cpp)
add_executable(hhkb2020_c hhkb2020_c.cpp)
add_executable(indeednow_2015_qualc_3 indeednow_2015_qualc_3.cpp)
add_executable(jsc2019_qual_b jsc2019_qual_b.cpp)
add_executable(nikkei2019_2_qual_d nikkei2019_2_qual_d.cpp)
add_executable(nikkei2019_qual_d nikkei2019_qual_d.cpp)
add_executable(nikkei2019_qual_e nikkei2019_qual_e.cpp)
add_executable(practice2_a practice2_a.cpp)
add_executable(practice2_b practice2_b.cpp)
add_executable(sumitb2019_c sumitb2019_c.cpp)